More overflow fixes;

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ h1, h2, h3, h4 {
 .App {
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 500px) {
